--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,6 @@
         },
         "default_title":"Sniper Table Scraper",
         "default_popup": "extention.html" 
-    }
+    },
+    "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net; object-src 'self'"
 }
