--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,29 @@
 {
-    "manifest_version":2,
-    "version":"1.1.0",
+    "manifest_version":3,
+    "version":"2.0.0",
     "author": "Rajan Bajaj",
-    "description": "Take control of your data extraction with Sniper Table Scraper! This powerful browser extension allows you to easily scrape and download tables from any webpage. Whether you need data for analysis, reporting, or research, Sniper Table Scraper streamlines the process with intuitive features and a user-friendly interface. Simply click to add download buttons to tables on the page and retrieve data in a clean CSV format. Perfect for professionals, researchers, and data enthusiasts, Sniper Table Scraper is your go-to tool for efficient data extraction.",
-    "developer": {
-        "name": "Rajan Bajaj",
-        "url": "https://www.linkedin.com/in/rajan-bajaj-b7b3b2133/"
-    },
+    "description": "Take control of your data extraction with Sniper Table Scraper! This powerful browser extension allows you to easily scrape and download tables from any webpage.",
     "name":"Sniper Table Scraper",
+    "web_accessible_resources": [
+	{
+	    "resources": [
+                "assets/icon/*"
+	    ],
+	    "matches": [
+                "*://*/*"
+	    ]
+	},
+	{
+            "resources": [
+	    	"npm/bootstrap@5.0.2/dist/css/bootstrap.min.css",
+		"npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+	    ],
+	    "matches": [
+		"https://cdn.jsdelivr.net/*"
+	    ]
+	}
+
+    ],
     "content_scripts":[
         {
             "matches":["<all_urls>"],
@@ -18,13 +34,12 @@
         "48": "assets/trowel.png",
         "96": "assets/trowel.png"
     },
-    "browser_action":{
+    "action":{
         "default_icon":{
             "19":"assets/trowel.png",
             "38":"assets/trowel.png"
         },
         "default_title":"Sniper Table Scraper",
         "default_popup": "extention.html" 
-    },
-    "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net; object-src 'self'"
+    }
 }
